kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: file-store
  labels:
    app.kubernetes.io/name: file-store
    app.kubernetes.io/version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: file-store 
    app.kubernetes.io/version: 1.0.0
